# lic

./: .editorconfig  .gitignore  INSTALL.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test-token.cpy
.github/workflows/: upload.yml
licenses/: apache-2.0.txt  bsd-1-clause.txt  cc-by.txt  cc0.txt  gtt.txt  mit.txt
src/: lic.py
