[project]
name = "license-generator"
version = "1.0.0"
authors = [
  { name="John Anchery", email="greeknio@gmail.com" },
]

description = "A console based tool to generate license for your project"
readme = "README.md"
requires-python = ">=2.7"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 2.8',
    'Programming Language :: Python :: 2.9',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.1',
    'Programming Language :: Python :: 3.2',
    'Programming Language :: Python :: 3.3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: GPL 3.0',
    'Operating System :: OS Independent',
]

[project.urls]
"Homepage" = "https://github.com/etcetra7n/lic"
"Bug Tracker" = "https://github.com/etcetra7n/lic/issues"
