[project]
name = "license-generator"
version = "1.0.0"
authors = [
  { name="etcetra7n", email="greeknio@gmail.com" },
]

description = "A console based license generator"
readme = "README.md"
license = {file = "LICENSE"}
repository = "https://github.com/etcetra7n/lic"
keywords = ["utility"]
requires-python = ">=2.7"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.1',
    'Programming Language :: Python :: 3.2',
    'Programming Language :: Python :: 3.3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: OS Independent',
]

[project.urls]
"Bug Tracker" = "https://github.com/etcetra7n/lic/issues"
